--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "@mdi/js": "^7.4.47",
+    "@mdi/react": "^1.6.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "mongodb": "^6.3.0",
