--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.0",
     "react-chartjs-2": "^5.2.0",
+    "react-router-dom": "^6.21.3",
     "recharts": "^2.10.4",
     "styled-components": "^6.1.8"
   }
